--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="https://imgur.com/a/N42WMEg
+                <a href="https://imgur.com/30MPz04
                   data-fancybox="gallery">
                   <img alt="a person standing in front of a rock formation"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="https://imgur.com/a/N42WMEg" />
+                    src="https://imgur.com/30MPz04" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="https://imgur.com/a/N42WMEg&auto=format&fit=crop&w=1963&q=80"
+                <a href="https://imgur.com/30MPz04&auto=format&fit=crop&w=1963&q=80"
                   data-fancybox="gallery">
                   <img alt="a cat laying on top of a sidewalk next to the ocean"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="https://imgur.com/a/N42WMEg&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1963&q=80" />
+                    src="https://imgur.com/30MPz04&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1963&q=80" />
                 </a>
               </div>
             </div>
