--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="https://imgur.com/30MPz04
+                <a href="https://i.imgur.com/30MPz04.jpeg"
                   data-fancybox="gallery">
                   <img alt="a person standing in front of a rock formation"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="https://imgur.com/30MPz04" />
+                    src="https://i.imgur.com/30MPz04.jpeg" />
                 </a>
               </div>
             </div>
