--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="flex flex-wrap w-full">
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full md:w-1/2 p-1">
-              <div class="overflow-hidden h-full w-full">
+              <div class="overflow-visible h-full w-full">
                 <a href="https://i.imgur.com/30MPz04.jpeg"
                   data-fancybox="gallery">
                   <img alt="a person standing in front of a rock formation"
