--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     <section class="text-neutral-700">
       <div class="container w-full">
         <div class="flex flex-wrap w-full">
-          <div class="flex w-full md:w-1/2 flex-wrap">
-            <div class="w-full md:w-1/2 p-1">
-              <div class="overflow-visible h-full w-full">
+          <div class="flex w-full md:w-1 flex-wrap">
+            <div class="w-full md:w-1 p-1">
+              <div class="overflow-hidden h-full w-full">
                 <a href="https://i.imgur.com/30MPz04.jpeg"
                   data-fancybox="gallery">
                   <img alt="a person standing in front of a rock formation"
