--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="container w-full">
         <div class="flex flex-wrap w-full">
           <div class="flex w-full md:w-1 flex-wrap">
-            <div class="w-full md:w-1 p-1">
+            <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
                 <a href="https://i.imgur.com/30MPz04.jpeg"
                   data-fancybox="gallery">
